# agnes

./: .gitignore  Cargo.toml  FUTURE.md  LICENSE  README.md
examples/: gdp_life.rs  gdp_life.rs.disabled  gdp_life_final.rs  gdp_life_local.rs  gdp_local.rs  gdp_metadata_join.rs  gdp_uri.rs  melt_aggregate.rs  table_macro.rs
examples/data/gdp/: API_NY.GDP.MKTP.CD_DS2_en_csv_v2.csv  README.md
examples/data/life/: Metadata_Indicator_API_SP.DYN.LE00.IN_DS2_en_csv_v2.csv
src/: access.rs  apply.rs  cons.rs  data_types.rs  error.rs  features.rs  field.rs  field_old.rs  fieldlist.rs  filter.rs  frame.rs  join.rs  join_old.rs  label.rs  lib.rs  masked.rs  ops.rs  partial.rs  permute.rs  reshape.rs  select.rs  stats.rs  store.rs  test_gen_data.rs  test_utils.rs  unique.rs  value.rs  view.rs  view_stats.rs
src/apply/: add_to_ds.rs  assert.rs  convert.rs  elem_fn.rs  field_fn.rs  map.rs  mapfn.rs  matches.rs  mod.rs  num_na.rs  select.rs  selector.rs  single_type.rs  sort.rs  sort_order.rs  stats.rs  sum.rs  unique.rs
src/ops/: field_op.rs  infer.rs  mod.rs  op_error.rs  scalar_op.rs
src/source/: csv.rs  csv_old.rs  decode.rs  file.rs  file_locator.rs  mod.rs  sample.rs
tests/: compile_tests.rs  csv.rs  csv_reader_test.rs  dataview.rs  file_reader_test.rs  serialize.rs
tests/common/: mod.rs
tests/compile-fail/: label_errors.rs  merge_errors.rs
tests/data/: README.md  gdp.csv  gdp.nopreamble.csv  sample1.csv
